Child FileDialog of modal dialog does not get focus on Gnome

XMLWordPrintable

    • b78
    • generic

        Child FileDialog of modal dialog does not get focus on Gnome

        Components of excluded child dialog can not get focus events

        JDK/JRE tested: 1.8.0_b109 (32/64 bits)
        OS/architecture: OEL 5.8, Solaris 10, Solaris 11
        Machine: spb23027.ru.oracle.com, irl10030.ie.oracle.com
        Reproducible: Always
        Is it a Regression: No
        Is it a platform specific issue: Yes

        To reproduce use attached file.
        Steps to repdoduce:
        1) Click frame's button
        2) Click window's button
        3) Click dialog's open button
        4) Close file dialog
        5) Click dialog's close button
        6) Repeat 1-3 steps

          1. Test.java
            5 kB
            Andrei Eremeev

              Assignee:
              Semyon Sadetsky (Inactive)
              Reporter:
              Andrei Eremeev
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: