8025815: Child FileDialog of modal dialog does not get focus on Gnome

Reviewed-by: azvegint, serb